# caliptra-mcu-sw

./: Cargo.toml  README.md
.github/workflows/: backport-ai.yml
docs/src/: SUMMARY.md  svn.md
emulator/app/src/: emulator.rs
emulator/caliptra/: Cargo.toml
emulator/caliptra/src/: caliptra.rs
emulator/periph/src/: emu_ctrl.rs  flash_ctrl.rs  mci.rs  otp.rs
hw/: fuses.hjson  mcu.rdl
hw/model/: Cargo.toml
hw/model/src/: lib.rs  model_emulated.rs
registers/fuses/src/: codegen.rs  schema.rs
registers/generated-emulator/src/: root_bus.rs
registers/generated-firmware/src/: fuses.rs
registers/generator-new/: Cargo.toml
registers/generator-new/src/: codegen.rs  lib.rs  value.rs
registers/systemrdl-new/src/: ast.rs  bits.rs  parser.rs
rom/src/: lib.rs  otp.rs
romtime/src/: mci.rs
runtime/kernel/capsules/src/: mcu_mbox.rs
runtime/kernel/veer/src/: chip.rs  pic.rs
runtime/userspace/api/caliptra-api/src/: certificate.rs  mailbox_api.rs
runtime/userspace/api/caliptra-api/src/crypto/: aes_gcm.rs
runtime/userspace/api/mcu-mbox-lib/src/: daemon.rs  transport.rs
runtime/userspace/syscall/src/: mcu_mbox.rs
tests/integration/src/: lib.rs  test_dot.rs
tests/integration/src/runtime/: mod.rs  test_hek_provisioning.rs
